mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/DuplicateResourceException.java
package com.example.mdd_backend.errors.exceptions;

public class DuplicateResourceException extends RuntimeException {
    public DuplicateResourceException(String message) {
        super(message);
    }
}
